2004-12-09  graydon hoare  <graydon@pobox.com>

	* ROADMAP: Add file.

2004-12-08  graydon hoare  <graydon@pobox.com>

	* change_set.cc (extend_renumbering_via_added_files): 
	Look up parent tid in existing renumbering.
	* commands.cc (attr): Check index for "set" subcommand.
	(lca): New diagnostic command.
	(log): Tidy up output formatting a bit.
	* po/monotone.pot: Regenerate.
	* tests/t_add_edge.at: New test to catch add failure.
	* testsuite.at: Call it.

2004-12-07  Richard Levitte  <richard@levitte.org>

	* Makefile.am: Keep package_*revision.{txt,h}, so they are saved
	as part of a distribution, and thereby make as sure as possible
	people who download monotone get historical information on where
	their copy of monotone came from.

2004-12-06  Richard Levitte  <richard@levitte.org>

	* monotone.cc: Add a hint on how to use --ticker.

2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_ambig_update.at: New test.
	* testsuite.at: Add it.

	* tests/t_explicit_merge.at: Add, having forgotten to last time.
	
2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_explicit_merge.at: New test.
	* testsuite.at: Add it.
	
2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* testsuite.at: Remove duplicate line created by merge.
	* ChangeLog: Re-sort after merges.

	* commands.cc (explicit_merge): Remove stray space.  Print id of
	merge result.
	(complete_command): Add back "}" deleted by merge.
	
2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc: Remove tabs.
	* diff_patch.cc: Likewise.

	* commands.cc (explicit_merge): New command.

2004-12-08  graydon hoare  <graydon@pobox.com>

	* change_set.cc (extend_renumbering_via_added_files): 
	Look up parent tid in existing renumbering.
	* commands.cc (attr): Check index for "set" subcommand.
	(lca): New diagnostic command.
	(log): Tidy up output formatting a bit.
	* po/monotone.pot: Regenerate.
	* tests/t_add_edge.at: New test to catch add failure.
	* testsuite.at: Call it.
